--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <p><a href="mailto:yzhong@london.edu" class="lbs-blue hover:underline"><i
                                     class="fas fa-envelope"></i>&nbsp;yzhong@london.edu</a></p>
                         <p><i class="fas fa-map-marker-alt"></i>&nbsp;Regent's Park, London NW1 4SA, UK</a></p>
-                        <p><a href="https://yzhong0.github.io/yueyangzhong/" class="lbs-blue hover:underline"><i
+                        <p><a href="https://www.london.edu/faculty-and-research/faculty-profiles/y/yueyang-zhong" class="lbs-blue hover:underline"><i
                                     class="fas fa-external-link-alt"></i>&nbsp;LBS Faculty Profile</a></p>
                     </div>
                 </div>
