--- a/index.html
+++ b/index.html
@@ -201,8 +201,7 @@
                 </li>
                 <li class="mt-1">Is Continuity All We Need? A Modeling Approach to Evaluating Relational Continuity in
                     Primary Care, with Naireet Ghosh and Nicos Savva. </li>
-                <li class="mt-1">Optimal Dispatching for Efficiency and Fairness in Emergency Service Spatial Queueing
-                    Model, with Jinghai He, Cheng Hua, and Tauhid Zaman. </li>
+                <li class="mt-1"> Optimal Dispatching for Efficiency and Fairness in Emergency Medical Service Systems, with Jinghai He, Cheng Hua, and Tauhid Zaman. </li>
             </ul>
         </div>
     </div>
