--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <h1 class="text-4xl text-blue-600 font-bold mb-4">RESEARCH</h1>
             <h2 class="text-2xl text-gray-800 font-bold mt-4">PUBLICATIONS</h2>
             <ul class="list-disc ml-8 mt-2 text-lg">
-                <li class="mt-1"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4090021"
+                <li class="mt-1"><a href="https://pubsonline.informs.org/doi/abs/10.1287/opre.2022.0197"
                         class="hover:underline">"Learning to Schedule in Multiclass Many-Server Queues with
                         Abandonment,"</a> (2024), with John R. Birge and Amy R. Ward. Accepted in <em>Operations
                         Research</em>. </li>
