--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <ul class="list-disc ml-8 mt-2 text-lg">
                 <li class="mt-1"><a href="https://pubsonline.informs.org/doi/abs/10.1287/opre.2022.0197"
                         class="hover:underline">"Learning to Schedule in Multiclass Many-Server Queues with
-                        Abandonment,"</a> (2024), with John R. Birge and Amy R. Ward. Accepted in <em>Operations
+                        Abandonment,"</a> (2024), with John R. Birge and Amy R. Ward. <em>Operations
                         Research</em>. </li>
                 <li class="mt-1"><a href="https://pubsonline.informs.org/doi/10.1287/opre.2023.2487"
                         class="hover:underline">"Behavior-Aware Queueing: The Finite-Buffer Setting with Strategic
