--- a/index.html
+++ b/index.html
@@ -108,40 +108,41 @@
                 Yueyang Zhong is an Assistant Professor of <a
                     href="https://www.london.edu/faculty-and-research/management-science-and-operations"
                     class="hover:underline">Management Science and Operations</a> at London Business School. Before
-                joining LBS, she worked as a postdoctoral principal researcher under the guidance of <a
+                joining LBS, she worked as a postdoctoral researcher under the guidance of <a
                     href="https://vahideh-manshadi.com/" class="hover:underline">Prof. Vahideh Manshadi</a> and <a
-                    href="https://faculty.chicagobooth.edu/rad-niazadeh" class="hover:underline">Prof. Rad Niazadeh</a>.
+                    href="https://faculty.chicagobooth.edu/rad-niazadeh" class="hover:underline">Prof. Rad Niazadeh</a> in 2024.
                 Yueyang completed her PhD in Management Science and Operations Management at the University of Chicago
                 Booth School of Business in 2023, where she was advised by <a
                     href="https://www.chicagobooth.edu/faculty/directory/w/amy-ward" class="hover:underline">Prof. Amy
                     Ward</a> and <a href="https://www.chicagobooth.edu/faculty/directory/b/john-r-birge"
-                    class="hover:underline">Prof. John Birge</a>. She earned her Bachelor’s degree in <a
+                    class="hover:underline">Prof. John Birge</a>. Her PhD dissertation is
+                titled <a href="https://www.proquest.com/docview/2901404282/CDEAA1D0E7FA41DDPQ"
+                    class="hover:underline">"Many-Server Queueing Models With Applications to Modern Service Operations
+                    Management"</a>. Prior to her PhD, Yueyang earned her Bachelor’s degree in <a
                     href="https://www.ie.tsinghua.edu.cn/eng" class="hover:underline">Industrial Engineering</a> and <a
                     href="https://www.tsinghua.edu.cn/en" class="hover:underline">Economics</a> from Tsinghua University
                 in 2018.
             </p>
 
             <p class="text-lg mt-2">
-                Yueyang's research focuses on stochastic modeling and optimization of service systems, with the
-                overarching goal of devising policies that align individual incentives with the objectives of system
-                designers.
-                Her research interests span two main areas:
+                Yueyang's research focuses on advancing modern service systems. She is deeply passionate about the following three foundational research areas:
             </p>
             <ul class="list-disc ml-8 mt-2 text-lg">
-                <li class="mt-1">Behavior-aware Operations: She investigates how system environments influence customer and
-                    server behaviors, as well as their interactions, subsequently shaping the design of service systems
-                    through theoretical modeling and empirical/experimental studies. </li>
-                <li class="mt-1">Socially-aware Operations: She explores the crucial role of information in reconciling
-                    misaligned objectives, especially in domains with significant societal impact such as education and
-                    judicial systems. Additionally, she tackles the challenges of fairness in resource allocation within
-                    contexts like ride-sharing and public services.</li>
+                <li class="mt-1"> <b>Strategic Queueing:</b> She investigates human strategic behaviors in queueing systems, examining how system environments influence customer and server behaviors, as well as their interactions, and their implications for system design. Her approach combines stochastic modeling with empirical and experimental studies.</li>
+                <li class="mt-1"> <b>Online Learning in Queueing:</b> She leverages structural results from queueing theory to develop online learning algorithms to optimize decision-making in queueing systems. </li>
+                <li class="mt-1"> <b>Applied Probability and Stochastic Processes:</b> She employs fluid approximation (first-order deterministic approximation) and diffusion approximation (second-order stochastic approximation) to study queueing systems that lack the tractability of exact analysis. </li>
+            </ul>
+            <p class="text-lg mt-2">
+                In addition to these foundational research themes, her recent active working areas include:
+            </p>
+            <ul class="list-disc ml-8 mt-2 text-lg">
+                <li class="mt-1"> <b>Information Design in High-Stakes Industries:</b> She explores how information can be strategically designed to enhance outcomes in critical sectors such as mental health and education. Her work integrates theoretical modeling with empirical analysis and field experiments to uncover actionable solutions that improve performance.</li>
+                <li class="mt-1"> <b>Healthcare Operations:</b> She studies the interplay of efficiency, quality, and equity in healthcare delivery systems in the UK. By combining stochastic modeling, machine learning, and empirical methods, she aims to develop operational solutions that optimize resource allocation and improve patient outcomes in an equitable manner. </li>
             </ul>
             <p class="text-lg mt-2">
                 Her research employs tools from applied probability, queueing theory, game theory, information theory,
-                optimization, statistics, online learning, and reinforcement learning. Yueyang's PhD dissertation is
-                titled <a href="https://www.proquest.com/docview/2901404282/CDEAA1D0E7FA41DDPQ"
-                    class="hover:underline">"Many-Server Queueing Models With Applications to Modern Service Operations
-                    Management"</a>.
+                optimization, statistics, online learning, and reinforcement learning. 
+                Yueyang is actively seeking Ph.D. students and short-term research interns passionate about these areas. Candidates with strong backgrounds in mathematics, economics, or statistics are encouraged to contact her via email to explore opportunities for collaboration.
             </p>
         </div>
     </div>
