--- a/index.html
+++ b/index.html
@@ -128,21 +128,24 @@
                 Yueyang's research focuses on advancing modern service systems. She is deeply passionate about the following three foundational research areas:
             </p>
             <ul class="list-disc ml-8 mt-2 text-lg">
-                <li class="mt-1"> <b>Strategic Queueing:</b> She investigates human strategic behaviors in queueing systems, examining how system environments influence customer and server behaviors, as well as their interactions, and their implications for system design. Her approach combines stochastic modeling with empirical and experimental studies.</li>
-                <li class="mt-1"> <b>Online Learning in Queueing:</b> She leverages structural results from queueing theory to develop online learning algorithms to optimize decision-making in queueing systems. </li>
-                <li class="mt-1"> <b>Applied Probability and Stochastic Processes:</b> She employs fluid approximation (first-order deterministic approximation) and diffusion approximation (second-order stochastic approximation) to study queueing systems that lack the tractability of exact analysis. </li>
+                <li class="mt-1"> <u>Strategic Queueing:</u> She investigates human strategic behaviors in queueing systems, examining how system environments influence customer and server behaviors, as well as their interactions, and their implications for system design. Her approach combines stochastic modeling with empirical and experimental studies.</li>
+                <li class="mt-1"> <u>Online Learning in Queueing:</u> She leverages structural results from queueing theory to develop online learning algorithms to optimize decision-making in queueing systems. </li>
+                <li class="mt-1"> <u>Applied Probability and Stochastic Processes:</u> She employs fluid approximation (first-order deterministic approximation) and diffusion approximation (second-order stochastic approximation) to study queueing systems that lack the tractability of exact analysis. </li>
             </ul>
             <p class="text-lg mt-2">
                 In addition to these foundational research themes, her recent active working areas include:
             </p>
             <ul class="list-disc ml-8 mt-2 text-lg">
-                <li class="mt-1"> <b>Information Design in High-Stakes Industries:</b> She explores how information can be strategically designed to enhance outcomes in critical sectors such as mental health and education. Her work integrates theoretical modeling with empirical analysis and field experiments to uncover actionable solutions that improve performance.</li>
-                <li class="mt-1"> <b>Healthcare Operations:</b> She studies the interplay of efficiency, quality, and equity in healthcare delivery systems in the UK. By combining stochastic modeling, machine learning, and empirical methods, she aims to develop operational solutions that optimize resource allocation and improve patient outcomes in an equitable manner. </li>
+                <li class="mt-1"> <u>Information Design in High-Stakes Industries:</u> She explores how information can be strategically designed to enhance outcomes in critical sectors such as mental health and education. Her work integrates theoretical modeling with empirical analysis and field experiments to uncover actionable solutions that improve performance.</li>
+                <li class="mt-1"> <u>Healthcare Operations:</u> She studies the interplay of efficiency, quality, and equity in healthcare delivery systems in the UK. By combining stochastic modeling, machine learning, and empirical methods, she aims to develop operational solutions that optimize resource allocation and improve patient outcomes in an equitable manner. </li>
+                <li class="mt-1"> <u>Robust Mechanism Design in the Digital Economy:</u> She explores robust regulatory approaches for emerging technologies that are not well understood by humans. Her work aims to effectively manage the risks and rewards associated with these technologies, ensuring that their societal impact is both positive and sustainable. </li>
             </ul>
             <p class="text-lg mt-2">
                 Her research employs tools from applied probability, queueing theory, game theory, information theory,
                 optimization, statistics, online learning, and reinforcement learning. 
-                Yueyang is actively seeking Ph.D. students and short-term research interns passionate about these areas. Candidates with strong backgrounds in mathematics, economics, or statistics are encouraged to contact her via email to explore opportunities for collaboration.
+            </p>
+            <p class="text-lg mt-2">
+                <b>Prospective Students:</b> Yueyang is actively seeking Ph.D. students and short-term research interns passionate about these areas. Candidates with strong backgrounds in mathematics, economics, or statistics are encouraged to contact her via email to explore opportunities.
             </p>
         </div>
     </div>
