--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <li class="mt-1"> <u>Robust Mechanism Design in the Digital Economy:</u> She explores robust regulatory approaches for emerging technologies that are not well understood by humans. Her work aims to effectively manage the risks and rewards associated with these technologies, ensuring that their societal impact is both positive and sustainable. </li>
             </ul>
             <p class="text-lg mt-2">
-                Her research employs tools from applied probability, queueing theory, game theory, information theory,
+                Her research utilizes tools from applied probability, queueing theory, game theory, information theory,
                 optimization, statistics, online learning, and reinforcement learning. 
             </p>
             <p class="text-lg mt-2">
