--- a/index.html
+++ b/index.html
@@ -155,14 +155,22 @@
             <h1 class="text-4xl text-blue-600 font-bold mb-4">RESEARCH</h1>
             <h2 class="text-2xl text-gray-800 font-bold mt-4">PUBLICATIONS</h2>
             <ul class="list-disc ml-8 mt-2 text-lg">
-                <li class="mt-1"><a href="https://pubsonline.informs.org/doi/abs/10.1287/opre.2022.0197"
+		<li class="mt-1"><a href="https://pubsonline.informs.org/doi/abs/10.1287/opre.2022.0197"
                         class="hover:underline">"Learning to Schedule in Multiclass Many-Server Queues with
                         Abandonment,"</a> (2024), with John R. Birge and Amy R. Ward. <em>Operations
-                        Research</em>. </li>
+                        Research</em>. 
+                    <br/><em> We introduce a Learn-then-Schedule algorithm for a multiclass many-server queue with abandonment that achieves optimal regret rate by exploiting the asymptotic optimality of a simple, easy-to-implement index policy. </em><br/>
+                </li>
+                <ul class="list-circle ml-8 mt-2">
+                    <li class="mt-1">Media Mention: <a href="https://www.chicagobooth.edu/review/make-lines-move-more-quickly"
+                            class="hover:underline">Chicago Booth Review</a> </li>
+                </ul>
                 <li class="mt-1"><a href="https://pubsonline.informs.org/doi/10.1287/opre.2023.2487"
                         class="hover:underline">"Behavior-Aware Queueing: The Finite-Buffer Setting with Strategic
                         Servers,"</a> (2023), with Ragavendran Gopalakrishnan and Amy R. Ward. <em>Operations
-                        Research</em>.</li>
+                        Research</em>.
+		    <br/><em> We develop a queueing game model to examine how strategic servers' work speeds in many-server queueing systems are influenced by managerial decisions concerning staffing, compensation, and customer admission. </em><br/>
+		</li>
                 <ul class="list-circle ml-8 mt-2">
                     <li class="mt-1">Technical Supplement: <a href="https://papers.ssrn.com/abstract_id=4430477"
                             class="hover:underline">Some Properties of the Erlang-B and Erlang-C Formulae</a></li>
@@ -175,14 +183,21 @@
                 <li class="mt-1"><a href="https://www.sciencedirect.com/science/article/pii/S016763772400052X"
                         class="hover:underline">"Some Asymptotic Properties of the Erlang-C Formula in Many-Server
                         Limiting Regimes,"</a> (2024), with Ragavendran Gopalakrishnan. <em>Operations Research
-                        Letters</em> 54: pp. 107-116.</li>
+                        Letters</em> 54: pp. 107-116.
+		    <br/><em> We provide a complete characterization of the asymptotic behavior of the Erlang-C formula, a cornerstone of a wide range of optimization problems in many-server queueing systems. </em><br/>
+
+		</li>
                 <li class="mt-1"><a href="https://www.sciencedirect.com/science/article/pii/S0167637722000530"
                         class="hover:underline">"Asymptotically Optimal Idling in the GI/GI/N+GI Queue,"</a> (2022),
-                    with Amy R. Ward and Amber L. Puha. <em>Operations Research Letters</em> 50(3): pp. 362-369.</li>
+                    with Amy R. Ward and Amber L. Puha. <em>Operations Research Letters</em> 50(3): pp. 362-369.
+		    <br/><em> We show that an idling policy is asymptotically optimal in a GI/GI/N+GI queue, balancing operational costs and server utilization costs. </em><br/>
+		</li>
                 <li class="mt-1"><a href="https://www.ijcai.org/Proceedings/2020/0615.pdf"
                         class="hover:underline">"Data-Driven Market-Making via Model-Free Learning,"</a> (2021), with
                     YeeMan Bergstrom and Amy R. Ward. <em>Proceedings of the Twenty-Ninth International Joint Conference
-                        on Artificial Intelligence (IJCAI)</em>.</li>
+                        on Artificial Intelligence (IJCAI)</em>.
+		    <br/><em> We propose a Q-learning trading strategy for market-making on limit order books, which outperforms benchmarks in backtesting with a collaborating firm. </em><br/>
+		</li>
             </ul>
 
 
@@ -190,7 +205,9 @@
             <ul class="list-disc ml-8 mt-2 text-lg">
                 <li class="mt-1"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3699134"
                         class="hover:underline">"Queueing Versus Surge Pricing Mechanism: Efficiency, Equity, and
-                        Consumer Welfare,"</a> (2020), with Zhixi Wan and Zuo-Jun Max Shen. </li>
+                        Consumer Welfare,"</a> (2020), with Zhixi Wan and Zuo-Jun Max Shen. 
+		    <br/><em> We build queueing models to compare surge pricing and virtual queueing mechanisms for managing peak-hour demand on ridesharing platforms, focusing on efficiency and equity metrics.</em><br/>
+		</li>
                 <ul class="list-circle ml-8 mt-2">
                     <li class="mt-1">Finalist, 2021 INFORMS Conference on Service Science Best Student Paper Award </li>
                 </ul>
@@ -231,10 +248,11 @@
             <h1 class="text-4xl text-blue-600 font-bold mb-4">SERVICES</h1>
             <h2 class="text-2xl text-gray-800 font-bold mt-4">Academic Services</h2>
             <ul class="list-disc ml-8 mt-2">
-                <li class="mt-1">Ad-hoc Reviewer: Operations Research, Manufacturing & Service Operations Management,
-                    Mathematics of Operations Research, Queueing Systems, INFORMS Journal on Computing, European Journal
-                    of Operational Research, Operations Research Letters, Service Science.</li>
-                <li class="mt-1">Session Chair: INFORMS Annual Meeting, INFORMS CORS.</li>
+                <li class="mt-1">Journal Ad-hoc Referee: <em>Operations Research</em>, <em>Manufacturing & Service Operations Management</em>,
+                    <em>Mathematics of Operations Research</em>, <em>Production and Operations Management</em>, <em>Queueing Systems</em>, <em>Journal of Applied Probability</em>, <em>INFORMS Journal on Computing</em>, <em>European Journal
+                    of Operational Research</em>, <em>Operations Research Letters</em>, <em>Service Science</em>, <em>IEEE Transactions</em>.</li>
+                <li class="mt-1">Conference Referee: INFORMS Conference on Service Science (2023), MSOM Service Management SIG (2024), ACM Conference on Economics and Computation program committee (2025) </li>
+                <li class="mt-1">Paper Competition Committee: INFORMS Nicholson prize committee (2024), POMS College of Supply Chain Management Best Student Paper Competition (2025) </li>
             </ul>
             <h2 class="text-2xl text-gray-800 font-bold mt-4">Industry Experiences</h2>
             <ul class="list-disc ml-8 mt-2">
