--- a/index.html
+++ b/index.html
@@ -155,21 +155,21 @@
             <h1 class="text-4xl text-blue-600 font-bold mb-4">RESEARCH</h1>
             <h2 class="text-2xl text-gray-800 font-bold mt-4">PUBLICATIONS</h2>
             <ul class="list-disc ml-8 mt-2 text-lg">
-		<li class="mt-1"><a href="https://pubsonline.informs.org/doi/abs/10.1287/opre.2022.0197"
+		<li class="mt-1"> <b><a href="https://pubsonline.informs.org/doi/abs/10.1287/opre.2022.0197"
                         class="hover:underline">"Learning to Schedule in Multiclass Many-Server Queues with
                         Abandonment,"</a> (2024), with John R. Birge and Amy R. Ward. <em>Operations
-                        Research</em>. 
-                    <br/><em> We introduce a Learn-then-Schedule algorithm for a multiclass many-server queue with abandonment that achieves optimal regret rate by exploiting the asymptotic optimality of a simple, easy-to-implement index policy. </em><br/>
+                        Research</em>.</b>
+                    <br/>We introduce a Learn-then-Schedule algorithm for a multiclass many-server queue with abandonment that achieves optimal regret rate by exploiting the asymptotic optimality of a simple, easy-to-implement index policy.<br/>
                 </li>
                 <ul class="list-circle ml-8 mt-2">
                     <li class="mt-1">Media Mention: <a href="https://www.chicagobooth.edu/review/make-lines-move-more-quickly"
                             class="hover:underline">Chicago Booth Review</a> </li>
                 </ul>
-                <li class="mt-1"><a href="https://pubsonline.informs.org/doi/10.1287/opre.2023.2487"
+                <li class="mt-1"> <b><a href="https://pubsonline.informs.org/doi/10.1287/opre.2023.2487"
                         class="hover:underline">"Behavior-Aware Queueing: The Finite-Buffer Setting with Strategic
                         Servers,"</a> (2023), with Ragavendran Gopalakrishnan and Amy R. Ward. <em>Operations
-                        Research</em>.
-		    <br/><em> We develop a queueing game model to examine how strategic servers' work speeds in many-server queueing systems are influenced by managerial decisions concerning staffing, compensation, and customer admission. </em><br/>
+                        Research</em>.</b>
+		    <br/>We develop a queueing game model to examine how strategic servers' work speeds in many-server queueing systems are influenced by managerial decisions concerning staffing, compensation, and customer admission.<br/>
 		</li>
                 <ul class="list-circle ml-8 mt-2">
                     <li class="mt-1">Technical Supplement: <a href="https://papers.ssrn.com/abstract_id=4430477"
@@ -180,33 +180,33 @@
                             class="hover:underline">Smith Business Insight</a> </li>
                     <li class="mt-1">Finalist, 2022 INFORMS IBM Best Student Paper Award </li>
                 </ul>
-                <li class="mt-1"><a href="https://www.sciencedirect.com/science/article/pii/S016763772400052X"
+                <li class="mt-1"><b><a href="https://www.sciencedirect.com/science/article/pii/S016763772400052X"
                         class="hover:underline">"Some Asymptotic Properties of the Erlang-C Formula in Many-Server
                         Limiting Regimes,"</a> (2024), with Ragavendran Gopalakrishnan. <em>Operations Research
-                        Letters</em> 54: pp. 107-116.
-		    <br/><em> We provide a complete characterization of the asymptotic behavior of the Erlang-C formula, a cornerstone of a wide range of optimization problems in many-server queueing systems. </em><br/>
+                        Letters</em> 54: pp. 107-116.</b>
+		    <br/>We provide a complete characterization of the asymptotic behavior of the Erlang-C formula, a cornerstone of a wide range of optimization problems in many-server queueing systems.<br/>
 
 		</li>
-                <li class="mt-1"><a href="https://www.sciencedirect.com/science/article/pii/S0167637722000530"
+                <li class="mt-1"><b><a href="https://www.sciencedirect.com/science/article/pii/S0167637722000530"
                         class="hover:underline">"Asymptotically Optimal Idling in the GI/GI/N+GI Queue,"</a> (2022),
-                    with Amy R. Ward and Amber L. Puha. <em>Operations Research Letters</em> 50(3): pp. 362-369.
-		    <br/><em> We show that an idling policy is asymptotically optimal in a GI/GI/N+GI queue, balancing operational costs and server utilization costs. </em><br/>
+                    with Amy R. Ward and Amber L. Puha. <em>Operations Research Letters</em> 50(3): pp. 362-369.</b>
+		    <br/>We show that an idling policy is asymptotically optimal in a GI/GI/N+GI queue, balancing operational costs and server utilization costs.<br/>
 		</li>
-                <li class="mt-1"><a href="https://www.ijcai.org/Proceedings/2020/0615.pdf"
+                <li class="mt-1"><b><a href="https://www.ijcai.org/Proceedings/2020/0615.pdf"
                         class="hover:underline">"Data-Driven Market-Making via Model-Free Learning,"</a> (2021), with
                     YeeMan Bergstrom and Amy R. Ward. <em>Proceedings of the Twenty-Ninth International Joint Conference
-                        on Artificial Intelligence (IJCAI)</em>.
-		    <br/><em> We propose a Q-learning trading strategy for market-making on limit order books, which outperforms benchmarks in backtesting with a collaborating firm. </em><br/>
+                        on Artificial Intelligence (IJCAI)</em>.</b>
+		    <br/>We propose a Q-learning trading strategy for market-making on limit order books, which outperforms benchmarks in backtesting with a collaborating firm.<br/>
 		</li>
             </ul>
 
 
             <h2 class="text-2xl text-gray-800 font-bold mt-4">WORKING PAPERS</h2>
             <ul class="list-disc ml-8 mt-2 text-lg">
-                <li class="mt-1"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3699134"
+                <li class="mt-1"><b><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3699134"
                         class="hover:underline">"Queueing Versus Surge Pricing Mechanism: Efficiency, Equity, and
-                        Consumer Welfare,"</a> (2020), with Zhixi Wan and Zuo-Jun Max Shen. 
-		    <br/><em> We build queueing models to compare surge pricing and virtual queueing mechanisms for managing peak-hour demand on ridesharing platforms, focusing on efficiency and equity metrics.</em><br/>
+                        Consumer Welfare,"</a> (2020), with Zhixi Wan and Zuo-Jun Max Shen.</b>
+		    <br/>We build a queueing network model to compare surge pricing and virtual queueing mechanisms for managing peak-hour demand on ridesharing platforms, focusing on efficiency and equity metrics.<br/>
 		</li>
                 <ul class="list-circle ml-8 mt-2">
                     <li class="mt-1">Finalist, 2021 INFORMS Conference on Service Science Best Student Paper Award </li>
