--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
                 <ul class="list-circle ml-8 mt-2">
                     <li class="mt-1">Media Mention: <a href="https://www.chicagobooth.edu/review/make-lines-move-more-quickly"
                             class="hover:underline">Chicago Booth Review</a> </li>
+					<li class="mt-1">Research Brief (Video): <a href="https://www.youtube.com/watch?v=ua09sn79GfM"
+                            class="hover:underline">The ‘60 second’ video at London Business School</a> </li>
                 </ul>
                 <li class="mt-1"> <b><a href="https://pubsonline.informs.org/doi/10.1287/opre.2023.2487"
                         class="hover:underline">"Behavior-Aware Queueing: The Finite-Buffer Setting with Strategic
