--- a/index.html
+++ b/index.html
@@ -218,13 +218,13 @@
 
             <h2 class="text-2xl text-gray-800 font-bold mt-4">WORKS IN PROGRESS</h2>
             <ul class="list-disc ml-8 mt-2 text-lg">
-                <li class="mt-1">Naor’s Inequality Reversal When Strategic Customers Meet Strategic Servers, with
-                    Ragavendran Gopalakrishnan and Amy R. Ward. </li>
-                <li class="mt-1">Motivating Long-Term Effort by Information, with Vahideh Manshadi and Rad Niazadeh.
-                </li>
-                <li class="mt-1">Is Continuity All We Need? A Modeling Approach to Evaluating Relational Continuity in
-                    Primary Care, with Naireet Ghosh and Nicos Savva. </li>
-                <li class="mt-1"> Optimal Dispatching for Efficiency and Fairness in Emergency Medical Service Systems, with Jinghai He, Cheng Hua, and Tauhid Zaman. </li>
+                <li class="mt-1"> When Strategic Customers Meet Strategic Servers: Individual and Social Optimization in Many-Server Queueing System , with Ragavendran Gopalakrishnan and Amy R. Ward. Manuscript available upon request. </li>
+                <li class="mt-1"> Is Continuity All We Need? A Modeling Approach to Evaluating Relational Continuity in
+                    Primary Care, with Naireet Ghosh and Nicos Savva. Manuscript available upon request. </li>
+                <li class="mt-1"> Optimal Dispatching for Efficiency and Fairness in Emergency Medical Service Systems, with Jinghai He and Cheng Hua. Manuscript available upon request. </li>
+				<li class="mt-1"> Online Advertising Strategy for Long-Term Good via Robust IV-Q-learning with Noisy Instruments. Manuscript available upon request. </li>
+				<li class="mt-1"> Optimizing Nudge Type and Timing to Enhance Long-Term User Engagement. Field experiment in progress. </li>
+				<li class="mt-1"> Regulating the Unknown: Crafting Policy to Address the Inherent Uncertainties of AI Outcomes. Work in progress. </li>
             </ul>
         </div>
     </div>
