Modify image source and update publications and teaching
Updated publication links and teaching schedule.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div class="md:w-1/2 mt-4 md:mt-0 md:ml-8">
-                    <img src="YueyangZhong_lbs.jpg" alt="Yueyang Zhong" class="w-3/4 rounded-lg shadow-md">
+                    <img src="profile_LBS.JPG" alt="Yueyang Zhong" class="w-3/4 rounded-lg shadow-md">
                 </div>
             </div>
         </div>
@@ -155,7 +155,7 @@
             <h1 class="text-4xl text-blue-600 font-bold mb-4">RESEARCH</h1>
             <h2 class="text-2xl text-gray-800 font-bold mt-4">PUBLICATIONS</h2>
             <ul class="list-disc ml-8 mt-2 text-lg">
-		<li class="mt-1"> <b><a href="https://pubsonline.informs.org/doi/abs/10.1287/opre.2022.0197"
+		        <li class="mt-1"> <b><a href="https://pubsonline.informs.org/doi/abs/10.1287/opre.2022.0197"
                         class="hover:underline">"Learning to Schedule in Multiclass Many-Server Queues with
                         Abandonment,"</a> (2024), with John R. Birge and Amy R. Ward. <em>Operations
                         Research</em>.</b>
@@ -163,9 +163,8 @@
                 </li>
                 <ul class="list-circle ml-8 mt-2">
                     <li class="mt-1">Media Mention: <a href="https://www.chicagobooth.edu/review/make-lines-move-more-quickly"
-                            class="hover:underline">Chicago Booth Review</a> </li>
-					<li class="mt-1">Research Brief (Video): <a href="https://www.youtube.com/watch?v=ua09sn79GfM"
-                            class="hover:underline">The ‘60 second’ video at London Business School</a> </li>
+                            class="hover:underline">Chicago Booth Review</a>, <a href="https://www.youtube.com/watch?v=ua09sn79GfM"
+                            class="hover:underline">London Business School Research Brief Video</a> </li>
                 </ul>
                 <li class="mt-1"> <b><a href="https://pubsonline.informs.org/doi/10.1287/opre.2023.2487"
                         class="hover:underline">"Behavior-Aware Queueing: The Finite-Buffer Setting with Strategic
@@ -221,10 +220,7 @@
                 <li class="mt-1"> When Strategic Customers Meet Strategic Servers: Individual and Social Optimization in Many-Server Queueing System , with Ragavendran Gopalakrishnan and Amy R. Ward. Manuscript available upon request. </li>
                 <li class="mt-1"> Is Continuity All We Need? A Modeling Approach to Evaluating Relational Continuity in
                     Primary Care, with Naireet Ghosh and Nicos Savva. Manuscript available upon request. </li>
-                <li class="mt-1"> Optimal Dispatching for Efficiency and Fairness in Emergency Medical Service Systems, with Jinghai He and Cheng Hua. Manuscript available upon request. </li>
 				<li class="mt-1"> Online Advertising Strategy for Long-Term Good via Robust IV-Q-learning with Noisy Instruments. Manuscript available upon request. </li>
-				<li class="mt-1"> Optimizing Nudge Type and Timing to Enhance Long-Term User Engagement. Field experiment in progress. </li>
-				<li class="mt-1"> Regulating the Unknown: Crafting Policy to Address the Inherent Uncertainties of AI Outcomes. Work in progress. </li>
             </ul>
         </div>
     </div>
@@ -234,7 +230,9 @@
             <h1 class="text-4xl text-blue-600 font-bold mb-4">TEACHING</h1>
             <h2 class="text-2xl text-gray-800 font-bold mt-4">London Business School</h2>
             <ul class="list-disc ml-8 mt-2">
-                <li class="mt-1">Data Analytics for Management (MiM core): Fall 2024</li>
+                <li class="mt-1">Data Analytics for Management (MiM core): Fall 2024, 2025</li>
+				<li class="mt-1">Data Analytics for Managers (MBA core): Fall 2025</li>
+				<li class="mt-1">Queueing Theory (PhD): Summer 2026 (scheduled)</li>
             </ul>
             <h2 class="text-2xl text-gray-800 font-bold mt-4">The University of Chicago Booth School of Business</h2>
             <ul class="list-disc ml-8 mt-2">
