--- a/index.html
+++ b/index.html
@@ -155,23 +155,11 @@
             <h1 class="text-4xl text-blue-600 font-bold mb-4">RESEARCH</h1>
             <h2 class="text-2xl text-gray-800 font-bold mt-4">PUBLICATIONS</h2>
             <ul class="list-disc ml-8 mt-2 text-lg">
-		        <li class="mt-1"> <b><a href="https://pubsonline.informs.org/doi/abs/10.1287/opre.2022.0197"
-                        class="hover:underline">"Learning to Schedule in Multiclass Many-Server Queues with
-                        Abandonment,"</a> (2024), with John R. Birge and Amy R. Ward. <em>Operations
-                        Research</em>.</b>
-                    <br/>We introduce a Learn-then-Schedule algorithm for a multiclass many-server queue with abandonment that achieves optimal regret rate by exploiting the asymptotic optimality of a simple, easy-to-implement index policy.<br/>
-                </li>
-                <ul class="list-circle ml-8 mt-2">
-                    <li class="mt-1">Media Mention: <a href="https://www.chicagobooth.edu/review/make-lines-move-more-quickly"
-                            class="hover:underline">Chicago Booth Review</a>, <a href="https://www.youtube.com/watch?v=ua09sn79GfM"
-                            class="hover:underline">London Business School Research Brief Video</a> </li>
-                </ul>
-                <li class="mt-1"> <b><a href="https://pubsonline.informs.org/doi/10.1287/opre.2023.2487"
-                        class="hover:underline">"Behavior-Aware Queueing: The Finite-Buffer Setting with Strategic
-                        Servers,"</a> (2023), with Ragavendran Gopalakrishnan and Amy R. Ward. <em>Operations
-                        Research</em>.</b>
-		    <br/>We develop a queueing game model to examine how strategic servers' work speeds in many-server queueing systems are influenced by managerial decisions concerning staffing, compensation, and customer admission.<br/>
-		</li>
+				
+                <li class="mt-1"> <b>Zhong, Y., Gopalakrishnan, R., and Ward, A. R. (2025). <a href="https://pubsonline.informs.org/doi/10.1287/opre.2023.2487"
+                        class="hover:underline">Behavior-aware queueing: The finite-buffer setting with many strategic servers.</a> <em>Operations Research</em>, 73(1), pp.290–310.</b>
+		             <br/>We develop a queueing game model to examine how strategic servers' work speeds in many-server queueing systems are influenced by managerial decisions concerning staffing, compensation, and customer admission.<br/>
+		        </li>
                 <ul class="list-circle ml-8 mt-2">
                     <li class="mt-1">Technical Supplement: <a href="https://papers.ssrn.com/abstract_id=4430477"
                             class="hover:underline">Some Properties of the Erlang-B and Erlang-C Formulae</a></li>
@@ -181,24 +169,29 @@
                             class="hover:underline">Smith Business Insight</a> </li>
                     <li class="mt-1">Finalist, 2022 INFORMS IBM Best Student Paper Award </li>
                 </ul>
-                <li class="mt-1"><b><a href="https://www.sciencedirect.com/science/article/pii/S016763772400052X"
-                        class="hover:underline">"Some Asymptotic Properties of the Erlang-C Formula in Many-Server
-                        Limiting Regimes,"</a> (2024), with Ragavendran Gopalakrishnan. <em>Operations Research
-                        Letters</em> 54: pp. 107-116.</b>
-		    <br/>We provide a complete characterization of the asymptotic behavior of the Erlang-C formula, a cornerstone of a wide range of optimization problems in many-server queueing systems.<br/>
 
-		</li>
-                <li class="mt-1"><b><a href="https://www.sciencedirect.com/science/article/pii/S0167637722000530"
-                        class="hover:underline">"Asymptotically Optimal Idling in the GI/GI/N+GI Queue,"</a> (2022),
-                    with Amy R. Ward and Amber L. Puha. <em>Operations Research Letters</em> 50(3): pp. 362-369.</b>
-		    <br/>We show that an idling policy is asymptotically optimal in a GI/GI/N+GI queue, balancing operational costs and server utilization costs.<br/>
-		</li>
-                <li class="mt-1"><b><a href="https://www.ijcai.org/Proceedings/2020/0615.pdf"
-                        class="hover:underline">"Data-Driven Market-Making via Model-Free Learning,"</a> (2021), with
-                    YeeMan Bergstrom and Amy R. Ward. <em>Proceedings of the Twenty-Ninth International Joint Conference
-                        on Artificial Intelligence (IJCAI)</em>.</b>
-		    <br/>We propose a Q-learning trading strategy for market-making on limit order books, which outperforms benchmarks in backtesting with a collaborating firm.<br/>
-		</li>
+				<li class="mt-1"> <b>Zhong, Y., Birge, J. R., and Ward, A. R. (2025). <a href="https://pubsonline.informs.org/doi/abs/10.1287/opre.2022.0197"
+                        class="hover:underline">Learning to schedule in multiclass many-server queues with abandonment.</a> <em>Operations Research</em>, forthcoming.</b>
+                    <br/>We introduce a Learn-then-Schedule algorithm for a multiclass many-server queue with abandonment that achieves optimal regret rate by exploiting the asymptotic optimality of a simple, easy-to-implement index policy.<br/>
+                </li>
+                <ul class="list-circle ml-8 mt-2">
+                    <li class="mt-1">Media Mention: <a href="https://www.chicagobooth.edu/review/make-lines-move-more-quickly"
+                            class="hover:underline">Chicago Booth Review</a>, <a href="https://www.youtube.com/watch?v=ua09sn79GfM"
+                            class="hover:underline">London Business School Research Brief Video</a> </li>
+                </ul>
+				
+                <li class="mt-1"><b>Gopalakrishnan, R., and Zhong, Y. (2024). <a href="https://www.sciencedirect.com/science/article/pii/S016763772400052X"
+                        class="hover:underline">Some asymptotic properties of the Erlang-C formula in many-server limiting regimes.</a> <em>Operations Research Letters</em>, 54, pp.107–116.</b>
+		    		<br/>We provide a complete characterization of the asymptotic behavior of the Erlang-C formula, a cornerstone of a wide range of optimization problems in many-server queueing systems.<br/>
+				</li>
+                <li class="mt-1"><b>Zhong, Y., Ward, A. R., and Puha, A. L. (2022). <a href="https://www.sciencedirect.com/science/article/pii/S0167637722000530"
+                        class="hover:underline">Asymptotically optimal idling in the GI/GI/N+GI queue.</a> <em>Operations Research Letters</em>, 50(3), pp.362–369.</b>
+		    		<br/>We show that an idling policy is asymptotically optimal in a GI/GI/N+GI queue, balancing operational costs and server utilization costs.<br/>
+				</li>
+                <li class="mt-1"><b>Zhong, Y., Bergstrom, Y. M., and Ward, A. (2021). <a href="https://www.ijcai.org/Proceedings/2020/0615.pdf"
+                        class="hover:underline">Data-driven market-making via model-free learning.</a> <em>In Proceedings of the Twenty-Ninth International Conference on International Joint Conferences on Artificial Intelligence</em>, pp.4461–4468.</b>
+		    		<br/>We propose a Q-learning trading strategy for market-making on limit order books, which outperforms benchmarks in backtesting with a collaborating firm.<br/>
+				</li>
             </ul>
 
 
@@ -206,7 +199,7 @@
             <ul class="list-disc ml-8 mt-2 text-lg">
                 <li class="mt-1"><b><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3699134"
                         class="hover:underline">"Queueing Versus Surge Pricing Mechanism: Efficiency, Equity, and
-                        Consumer Welfare,"</a> (2020), with Zhixi Wan and Zuo-Jun Max Shen.</b>
+                        Consumer Welfare,"</a> with Zhixi Wan and Zuo-Jun Max Shen.</b>
 		    <br/>We build a queueing network model to compare surge pricing and virtual queueing mechanisms for managing peak-hour demand on ridesharing platforms, focusing on efficiency and equity metrics.<br/>
 		</li>
                 <ul class="list-circle ml-8 mt-2">
@@ -217,10 +210,16 @@
 
             <h2 class="text-2xl text-gray-800 font-bold mt-4">WORKS IN PROGRESS</h2>
             <ul class="list-disc ml-8 mt-2 text-lg">
-                <li class="mt-1"> When Strategic Customers Meet Strategic Servers: Individual and Social Optimization in Many-Server Queueing System , with Ragavendran Gopalakrishnan and Amy R. Ward. Manuscript available upon request. </li>
-                <li class="mt-1"> Is Continuity All We Need? A Modeling Approach to Evaluating Relational Continuity in
-                    Primary Care, with Naireet Ghosh and Nicos Savva. Manuscript available upon request. </li>
-				<li class="mt-1"> Online Advertising Strategy for Long-Term Good via Robust IV-Q-learning with Noisy Instruments. Manuscript available upon request. </li>
+                <li class="mt-1"> When Strategic Customers Meet Strategic Servers: Individual and Social Optimization in Many-Server Queueing System , with Ragavendran Gopalakrishnan and Amy R. Ward. </li>
+                <li class="mt-1"> Is Continuity All We Need? A Modeling Approach to Evaluating Relational Continuity in Primary Care, with Naireet Ghosh and Nicos Savva. </li>
+				<li class="mt-1"> Deep Learning Based Dispatching for Efficiency and Fairness in Emergency Medical Service Systems, with Jinghai He and Cheng Hua. </li>
+				<li class="mt-1"> Online Advertising Strategy for Long-Term Good via Robust IV-Q-learning with Noisy Instruments.  </li>
+				<li class="mt-1"> The Impact of System Congestion on Maternal and Neonatal Outcomes in England, with Harshita Kajaria-Montag and Agni Orfanoudaki. </li>
+				<li class="mt-1"> Balancing Fairness and Efficiency in Maternity Care, with Yuhang Du and Catherine Aiken. </li>
+				<li class="mt-1"> Regulating Uncertain AI R&D, with Cong Zhang. </li>
+				<li class="mt-1"> Strategic Servers in Winner-Takes-All Racing Queues, with Andrew Frazelle. </li>
+				<li class="mt-1"> Dynamic Information Design for Engagement, with Vahideh Manshadi and Rad Niazadeh. </li>
+				<li class="mt-1"> Dynamic Nudging to Improve Engagement in Mental Health Counseling, with Sidika Tunc Candogan and Guang Cheng. </li>
             </ul>
         </div>
     </div>
@@ -232,7 +231,7 @@
             <ul class="list-disc ml-8 mt-2">
                 <li class="mt-1">Data Analytics for Management (MiM core): Fall 2024, 2025</li>
 				<li class="mt-1">Data Analytics for Managers (MBA core): Fall 2025</li>
-				<li class="mt-1">Queueing Theory (PhD): Summer 2026 (scheduled)</li>
+				<li class="mt-1">Queueing Theory (PhD): Spring 2026 (scheduled)</li>
             </ul>
             <h2 class="text-2xl text-gray-800 font-bold mt-4">The University of Chicago Booth School of Business</h2>
             <ul class="list-disc ml-8 mt-2">
@@ -246,14 +245,16 @@
     <div id="services" class="section">
         <div class="container mx-auto p-8 rounded-lg shadow-lg">
             <h1 class="text-4xl text-blue-600 font-bold mb-4">SERVICES</h1>
-            <h2 class="text-2xl text-gray-800 font-bold mt-4">Academic Services</h2>
+            <h2 class="text-2xl text-gray-800 font-bold mt-4">Community Services</h2>
             <ul class="list-disc ml-8 mt-2">
-                <li class="mt-1">Journal Ad-hoc Referee: <em>Operations Research</em>, <em>Manufacturing & Service Operations Management</em>,
+                <li class="mt-1">Journal Ad-hoc Reviewer: <em>Operations Research</em>, <em>Management Science</em>, <em>Manufacturing & Service Operations Management</em>,
                     <em>Mathematics of Operations Research</em>, <em>Production and Operations Management</em>, <em>Queueing Systems</em>, <em>Journal of Applied Probability</em>, <em>INFORMS Journal on Computing</em>, <em>European Journal
-                    of Operational Research</em>, <em>Operations Research Letters</em>, <em>Service Science</em>, <em>IEEE Transactions</em>.</li>
-                <li class="mt-1">Conference Referee: INFORMS Conference on Service Science (2023), MSOM Service Management SIG (2024), ACM Conference on Economics and Computation program committee (2025) </li>
-                <li class="mt-1">Paper Competition Committee: INFORMS Nicholson prize committee (2024), POMS College of Supply Chain Management Best Student Paper Competition (2025) </li>
+                    of Operational Research</em>, <em>Operations Research Letters</em>, <em>Service Science</em>, <em>Journal of Applied Probability</em>, <em>Applied Probability Journals</em>, <em>IEEE Transactions</em>.</li>
+                <li class="mt-1">Conference Reviewer: INFORMS Conference on Service Science, MSOM SIGs, ACM Conference on Economics and Computation (EC), ACM Conference on Equity and Access in Algorithms, Mechanisms, and Optimization (EAAMO). </li>
+				<li class="mt-1">Guest Associate Editor for the 2025 Supply Chain Management SIG + MSOM 1RR Initiative </li>
+				<li class="mt-1">Judge: George Nicholson Student Paper Competition (2024–2025), POMS College of Supply Chain Management Best Student Paper Competition (2025), POMS-HK International Conference Best Student Paper Competition (2026). </li>
             </ul>
+			
             <h2 class="text-2xl text-gray-800 font-bold mt-4">Industry Experiences</h2>
             <ul class="list-disc ml-8 mt-2">
                 <li class="mt-1">Part-time Consulting, CLEARCOGS (Remote, Spring 2023)</li>
