--- a/index.html
+++ b/index.html
@@ -197,20 +197,22 @@
 
             <h2 class="text-2xl text-gray-800 font-bold mt-4">WORKING PAPERS</h2>
             <ul class="list-disc ml-8 mt-2 text-lg">
+				<li class="mt-1"><b><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5805802"
+                        class="hover:underline">"When Strategic Customers Meet Strategic Servers: Individual and Social Optimization in Many-Server Queueing System,"</a> with Ragavendran Gopalakrishnan and Amy R. Ward.</b>
+		    <br/>We initiate the study of <i>joint</i> strategic behavior of customers and servers in many-server queueing systems and discover fundamentally different insights than in previous works that studied models in which only customers or servers are strategic. <br/>
+				</li>
                 <li class="mt-1"><b><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3699134"
                         class="hover:underline">"Queueing Versus Surge Pricing Mechanism: Efficiency, Equity, and
                         Consumer Welfare,"</a> with Zhixi Wan and Zuo-Jun Max Shen.</b>
 		    <br/>We build a queueing network model to compare surge pricing and virtual queueing mechanisms for managing peak-hour demand on ridesharing platforms, focusing on efficiency and equity metrics.<br/>
-		</li>
+				</li>
                 <ul class="list-circle ml-8 mt-2">
                     <li class="mt-1">Finalist, 2021 INFORMS Conference on Service Science Best Student Paper Award </li>
                 </ul>
-
             </ul>
 
             <h2 class="text-2xl text-gray-800 font-bold mt-4">WORKS IN PROGRESS</h2>
             <ul class="list-disc ml-8 mt-2 text-lg">
-                <li class="mt-1"> When Strategic Customers Meet Strategic Servers: Individual and Social Optimization in Many-Server Queueing System , with Ragavendran Gopalakrishnan and Amy R. Ward. </li>
                 <li class="mt-1"> Is Continuity All We Need? A Modeling Approach to Evaluating Relational Continuity in Primary Care, with Naireet Ghosh and Nicos Savva. </li>
 				<li class="mt-1"> Deep Learning Based Dispatching for Efficiency and Fairness in Emergency Medical Service Systems, with Jinghai He and Cheng Hua. </li>
 				<li class="mt-1"> Online Advertising Strategy for Long-Term Good via Robust IV-Q-learning with Noisy Instruments.  </li>
