Correct author name in working papers section

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <h2 class="text-2xl text-gray-800 font-bold mt-4">WORKING PAPERS</h2>
             <ul class="list-disc ml-8 mt-2 text-lg">
 				<li class="mt-1"><b><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5805802"
-                        class="hover:underline">"When Strategic Customers Meet Strategic Servers: Individual and Social Optimization in Many-Server Queueing System,"</a> with Ragavendran Gopalakrishnan and Amy R. Ward.</b>
+                        class="hover:underline">"When Strategic Customers Meet Strategic Servers: Individual and Social Optimization in Many-Server Queueing System,"</a> with Raga Gopalakrishnan and Amy R. Ward.</b>
 		    <br/>We initiate the study of <i>joint</i> strategic behavior of customers and servers in many-server queueing systems and discover fundamentally different insights than in previous works that studied models in which only customers or servers are strategic. <br/>
 				</li>
                 <li class="mt-1"><b><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3699134"
